project SBMalloc
version `grep -e '^#define SBMA_MAJOR' -e '^#define SBMA_MINOR'\
              -e '^#define SBMA_PATCH' -e '^#define SBMA_RCAND' sbma.h\
       | awk '{print $3}'\
       | paste -d ' ' - - - -\
       | awk '{printf "%d.%d.%d%s", $1,$2,$3,$4}'`
commit `git rev-parse --short HEAD`

add_with_param profile no no= yes='-DUSE_PROFILE -pg'
add_with_param pthread no no= yes='-DUSE_PTHREAD -pthread'
add_with_param openmp no no= yes='-DUSE_OPENMP -fopenmp'
add_with_param mmap no no= yes='-DUSE_MMAP'
add_with_param memalign no no= yes='-DUSE_MEMALIGN'
add_with_param sbma no no= yes='-DUSE_SBMA'
add_with_param libc no no= yes='-DUSE_LIBC'

add_library libsbma.a hooks.o ipc.o klmalloc.o lock.o malloc.o mcntrl.o \
  mextra.o mmu.o mstate.o vmm.o

add_executable test/micro1 test/micro1.c

add_executable test/micro2 test/micro2.c
add_dependencies test/micro2 klmalloc.h klconfig.h
target_link_libraries test/micro2 libsbma.a -ldl -lrt -pthread

add_executable test/check1 test/check1.c
add_dependencies test/check1 klmalloc.h klconfig.h config.h
target_link_libraries test/check1 libsbma.a -ldl -lrt -pthread

add_executable test/check2 test/check2.c
add_dependencies test/check2 sbma.h config.h
target_link_libraries test/check2 libsbma.a -ldl -lrt -pthread

add_executable test/check3 test/check3.c
add_dependencies test/check3 sbma.h config.h
target_link_libraries test/check3 libsbma.a -ldl -lrt -pthread

install_libraries libsbma.a
