project SBMalloc
version `grep -e '^#define SBMA_MAJOR' -e '^#define SBMA_MINOR'\
              -e '^#define SBMA_PATCH' -e '^#define SBMA_RCAND' sbma.h\
       | awk '{print $3}'\
       | paste -d ' ' - - - -\
       | awk '{printf "%d.%d.%d%s", $1,$2,$3,$4}'`
commit `git rev-parse --short HEAD`

add_with_param profile no no= yes='-DUSE_PROFILE -pg'
add_with_param pthread no no= yes='-DUSE_PTHREAD -pthread'
add_with_param openmp no no= yes='-DUSE_OPENMP -fopenmp'
add_with_param mmap no no= yes='-DUSE_MMAP'
add_with_param memalign no no= yes='-DUSE_MEMALIGN'
add_with_param sbma no no= yes='-DUSE_SBMA'
add_with_param libc no no= yes='-DUSE_LIBC'

add_library libsbma.a hooks.o ipc.o klmalloc.o lock.o malloc.o mcntrl.o \
  mextra.o mmu.o mstate.o vmm.o

add_executable test/micro1 test/micro1.c
add_dependencies test/micro1 sbma.h
target_link_libraries test/micro1 libsbma.a -ldl -lrt -pthread

install_libraries libsbma.a
